[FIX] Overflow of right activity feeds and dim tasks

--- a/source/app/static/assets/css/atlantis.css
+++ b/source/app/static/assets/css/atlantis.css
@@ -8199,6 +8199,7 @@ body .badge-danger {
 .activity-feed .feed-item .text {
     position: relative;
     top: -3px;
+    overflow-wrap: break-word;
 }
 
 
